Add hero image to About page and set favicon

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="/image.png" />
     <title>RisingVisionaryServices - Professional Training Academy</title>
     <meta name="description" content="Shape your tomorrow by building a skill today. Join our small-batch courses in Full-Stack Development, AI, Design, and more. Only 1500 SEK per course." />
     <meta name="author" content="RisingVisionaryServices" />
